First running version with sbt 1.1 and scala 2.12