@@ -1,7 +1,8 @@
-ScriptedPlugin.scriptedSettings
+//TODO: ADD again
+//ScriptedPlugin.scriptedSettings
 
-scriptedLaunchOpts := { scriptedLaunchOpts.value ++
-  Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Dplugin.version=" + version.value)
+//TODO: ADD again
+/*scriptedLaunchOpts := { scriptedLaunchOpts.value ++
+  Seq("-Xmx1024M", "-Dplugin.version=" + version.value)
 }
-
-scriptedBufferLog := false
+scriptedBufferLog := false*/
